syntax = "proto3";

package operator;

import "google/protobuf/descriptor.proto";
import "google/protobuf/duration.proto";

option go_package = "operator";

message Request {
	Source source = 1;
	Call call = 2;
}

// Call represents a completed gRPC call. The Error field will be non-nil if
// it resulted in an error.
message Call {
	string service = 1;
	string method = 2;
	Error error = 5;
	google.protobuf.Duration duration = 6;
}

message Error {
	string message = 1;
}

message Source {
	SourceType type = 1;
	User user = 2;
	Room room = 3;
	string hostname = 4;
}

enum SourceType {
	HUBOT = 0;
	COMMAND = 1;
}

message Room {
    int64 id = 1;
    string name = 2;
}

message User {
	string id = 1;
	string login = 2;
	string real_name = 3;
	string email = 4;
}

message Message {
	Source source = 1;
	string text = 2;
}

message Output {
	string PlainText = 1;
}

message ServerStartupNotice {
	string Address = 1;
	string Protocol = 2;
	repeated Service services = 3;
}

message Service {
	string name = 1;
}

message ServerStartupError {
	string message = 1;
}

message ServiceRegistered {
	Service service = 1;
}

message ServiceStartupError {
	Service service = 1;
	string message = 2;
}

extend google.protobuf.ServiceOptions {
	string name = 51234;
}
